--- a/counts-frontend/src/styles/Home.module.scss
+++ b/counts-frontend/src/styles/Home.module.scss
@@ -29,27 +29,25 @@
 }
 
 .form {
-
   [type="file"] {
     font-size: 1em;
     padding: 1em;
     border: solid 1px gray;
-    border-radius: .5em;
+    border-radius: 0.5em;
   }
 
   button {
     color: white;
     font-size: 1em;
     background-color: blueviolet;
-    padding: .5em .8em;
+    padding: 0.5em 0.8em;
     border: none;
-    border-radius: .2em;
+    border-radius: 0.2em;
   }
 
   code {
     text-align: left;
   }
-
 }
 
 .footer {
